force-app/main/default/objects/OrgSync_Training_Staging__c/OrgSync_Training_Staging__c.object-meta.xml
<CustomObject>
    <label>Training Staging</label>
    <nameField>
        <displayFormat>TRNST-{0000}</displayFormat>
        <label>OrgSync Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Stagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>