force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Automated_Mode__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Automated_Mode__c</fullName>
    <label>Automated Mode?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>