force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>