force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Consents_To_Virtual_Training__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Consents_To_Virtual_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consents To Virtual Training</label>
    <type>Checkbox</type>
</CustomField>