force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_CPT_Usage_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_CPT_Usage_Reason__c</fullName>
    <label>CPT Usage Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP Choice</fullName>
            </value>
            <value>
                <fullName>CSM on ETO</fullName>
            </value>
            <value>
                <fullName>CSM on LOA/Empty Territory</fullName>
            </value>
            <value>
                <fullName>CSM Schedule/ROI Conflict</fullName>
            </value>
            <value>
                <fullName>Patient Request - Conflict</fullName>
            </value>
            <value>
                <fullName>Patient not in CSM Territory</fullName>
            </value>
            <value>
                <fullName>Other Language Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>