force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_CSM__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>