force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Current_CGM_Brand__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_CGM_Brand__c</fullName>
    <label>Current CGM Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dexcom</fullName>
            </value>
            <value>
                <fullName>Medtronic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>