force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Current_CGM_Model__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_CGM_Model__c</fullName>
    <label>Current CGM Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medtronic Guardian™</fullName>
            </value>
            <value>
                <fullName>G6®</fullName>
            </value>
            <value>
                <fullName>G7®</fullName>
            </value>
            <value>
                <fullName>FreeStyle Libre 2 Sensor</fullName>
            </value>
            <value>
                <fullName>FreeStyle Libre 2 Plus Sensor</fullName>
            </value>
            <value>
                <fullName>FreeStyle Libre 3 Sensor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>