force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Current_Therapy_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_Therapy_Satisfaction__c</fullName>
    <label>Current Therapy Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not satisfied</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>