force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Current_Therapy_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_Therapy_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Therapy Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>