force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Decline_Comments__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Decline_Comments__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <description>Used to store Explanation field value from Classic</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Decline Comments</label>
    <type>TextArea</type>
</CustomField>