force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Decline_Reason__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distance</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Already booked</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Patient Declined Follow-Up</fullName>
            </value>
            <value>
                <fullName>Follow-Up Not Necessary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self Guided</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>