force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Educator_Type__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Educator_Type__c</fullName>
    <label>Educator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>