force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_External_Trainer__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_External_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Trainer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Stagings (External Trainer)</relationshipLabel>
    <relationshipName>Training_Stagings1</relationshipName>
    <type>Lookup</type>
</CustomField>