force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Follow_Up_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Follow_Up_Training_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow-Up Training Date</label>
    <type>Date</type>
</CustomField>