force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Insulin_Amount_Method__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insulin_Amount_Method__c</fullName>
    <label>Insulin Amount Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I use a sliding scale</fullName>
            </value>
            <value>
                <fullName>I have set amounts</fullName>
            </value>
            <value>
                <fullName>I count my carbohydrates</fullName>
            </value>
            <value>
                <fullName>use ratios</fullName>
            </value>
            <value>
                <fullName>I do not know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>