force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Insulin_Pump_Interaction_Frequen__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insulin_Pump_Interaction_Frequen__c</fullName>
    <label>Insulin Pump Interaction Frequen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not often</fullName>
            </value>
            <value>
                <fullName>only when I must</fullName>
            </value>
            <value>
                <fullName>Usually only at meal times</fullName>
            </value>
            <value>
                <fullName>I am constantly checking and making treatment decisions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>