force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Internal_Trainer__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Internal_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Stagings1</relationshipName>
    <type>Lookup</type>
</CustomField>