force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Last_A1c_Result__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Last_A1c_Result__c</fullName>
    <label>Last A1c Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 7%</fullName>
            </value>
            <value>
                <fullName>Between 7% - 9%</fullName>
            </value>
            <value>
                <fullName>Greater than 9%</fullName>
            </value>
            <value>
                <fullName>I do not know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>