force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Last_Trainer_Notification__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Last_Trainer_Notification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgSync Date Training Assigned</label>
    <type>DateTime</type>
</CustomField>