force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Legacy_Id__c</fullName>
    <description>To store the Record Id from classic side for the training record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgSync Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>