force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Not_Trained_Comments__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Not_Trained_Comments__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Not Trained Comments</label>
    <type>TextArea</type>
</CustomField>