force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Not_Trained_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Not_Trained_Reason__c</fullName>
    <complianceGroup>PII;HIPAA</complianceGroup>
    <label>Not Trained Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written or verbal refusal</fullName>
            </value>
            <value>
                <fullName>Written or verbal notification of self-start</fullName>
            </value>
            <value>
                <fullName>Unable to contact (3 attempts)</fullName>
            </value>
            <value>
                <fullName>Previously on Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self Guided</fullName>
            </value>
            <value>
                <fullName>Self Started with Phone Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>