force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Operating_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating System</label>
    <length>250</length>
    <type>Text</type>
</CustomField>