force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Other_CPT_Usage_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Other_CPT_Usage_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrgSync Other CPT Usage Reason</label>
    <type>TextArea</type>
</CustomField>