force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Pay_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Date</label>
    <type>Date</type>
</CustomField>