force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Practice__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Stagings (Practice)</relationshipLabel>
    <relationshipName>Training_Stagings2</relationshipName>
    <type>Lookup</type>
</CustomField>