force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Pre_Pod_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Pre_Pod_Training_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Pod Training Date</label>
    <type>Date</type>
</CustomField>