force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Preferred_Day_Option_1__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Preferred_Day_Option_1__c</fullName>
    <label>Preferred Day Option - 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>