force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Preferred_Timing_Option_2__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Preferred_Timing_Option_2__c</fullName>
    <label>Preferred Timing Option - 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>