force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Product__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UST400</fullName>
            </value>
            <value>
                <fullName>UST200</fullName>
            </value>
            <value>
                <fullName>DASH</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>CAT35E</fullName>
            </value>
            <value>
                <fullName>CAT35F</fullName>
            </value>
            <value>
                <fullName>CAT45E</fullName>
            </value>
            <value>
                <fullName>CAT45F</fullName>
            </value>
            <value>
                <fullName>OP5</fullName>
            </value>
            <value>
                <fullName>OP5+G6</fullName>
            </value>
            <value>
                <fullName>OP5+G7</fullName>
            </value>
            <value>
                <fullName>OP5 + Libre 2+</fullName>
            </value>
            <value>
                <fullName>DASH POD</fullName>
            </value>
            <value>
                <fullName>DASH POD and PDM</fullName>
            </value>
            <value>
                <fullName>Omnipod GO</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>