force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Saline_Insulin_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Saline_Insulin_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Saline Insulin Start Date</label>
    <type>Date</type>
</CustomField>