force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Severe_glucose_events_in_last_6__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Severe_glucose_events_in_last_6__c</fullName>
    <description>Severe glucose events in last 6 Months</description>
    <label>Severe glucose events in last 6 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>