force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Trainer__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Stagings (Trainer)</relationshipLabel>
    <relationshipName>Training_Stagings3</relationshipName>
    <type>Lookup</type>
</CustomField>