force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Trainer_Name_OrgSync__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Trainer_Name_OrgSync__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trainer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>