force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_TrainerNote__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_TrainerNote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trainer Note</label>
    <type>TextArea</type>
</CustomField>