force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Training_Language__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Language__c</fullName>
    <label>Training Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>