force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Training_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Scheduled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Scheduled Date</label>
    <type>DateTime</type>
</CustomField>