force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Training_Type2__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Type2__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Pod Training</fullName>
            </value>
            <value>
                <fullName>Saline/Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Pre-Pod + Saline/Insulin Start Training</fullName>
            </value>
            <value>
                <fullName>Follow-Up Training</fullName>
            </value>
            <value>
                <fullName>Canada Special Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>