force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Type_of_Diabetes__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Type_of_Diabetes__c</fullName>
    <label>Type of Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2: Using Insulin</fullName>
            </value>
            <value>
                <fullName>Other/Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>