force-app/main/default/objects/OrgSync_Training_Staging__c/fields/OrgSync_Type_of_Pump__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Type_of_Pump__c</fullName>
    <label>Type of Pump</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animas IR 1200/1250</fullName>
            </value>
            <value>
                <fullName>Del Animas R/IR 1000</fullName>
            </value>
            <value>
                <fullName>Deltec Cozmo/Cozmore</fullName>
            </value>
            <value>
                <fullName>Disetronic D-TRON/D-TRONplus</fullName>
            </value>
            <value>
                <fullName>Disetronic H-TRON/H-TRONplus</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed 507/507c</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed 508</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed™ 630G</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed™ 670G</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed™ 770G</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed™ 780G</fullName>
            </value>
            <value>
                <fullName>Tandem t-slim X2 with Basal IQ</fullName>
            </value>
            <value>
                <fullName>Tandem t-slim X2 with Control IQ</fullName>
            </value>
            <value>
                <fullName>Tandem Mobi</fullName>
            </value>
            <value>
                <fullName>BetaBionics iLet</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm 511</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm 512</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm 515</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm 712</fullName>
            </value>
            <value>
                <fullName>Medtronic MiniMed Paradigm 715</fullName>
            </value>
            <value>
                <fullName>Omnipod® System</fullName>
            </value>
            <value>
                <fullName>Omnipod DASH®</fullName>
            </value>
            <value>
                <fullName>Eros</fullName>
            </value>
            <value>
                <fullName>Dash</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>